--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,13 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+src/env.d.ts
 
 # macOS-specific files
 .DS_Store
 
 # jetbrains setting folder
 .idea/
+
+# This is a learning project. No need to commit this
+package-lock.json
