--- a/package.json
+++ b/package.json
@@ -15,8 +15,19 @@
     "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^1.2.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-organize-imports": "^3.2.4"
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "typescript-eslint": "^7.13.1"
+  },
+  "overrides": {
+    "eslint": "^9.5.0"
   }
 }
