--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
+    "markdownlint-cli": "^0.41.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-organize-imports": "^3.2.4",
