--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@typescript-eslint/parser": "^7.13.1",
+    "cspell": "^8.9.1",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.2",
