--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -15,6 +16,8 @@
     "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.5.0",
     "@typescript-eslint/parser": "^7.13.1",
     "cspell": "^8.9.1",
@@ -23,6 +26,8 @@
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "markdownlint-cli": "^0.41.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
