--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   },
   "devDependencies": {
