--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
