feat: tailwind linting with prettier and stylelint

--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "stylelint": "^16.6.1",
     "stylelint-config-astro": "^1.0.4",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "stylelint-prettier": "^5.0.0",
     "typescript-eslint": "^7.13.1"
   },
