--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   },
@@ -22,6 +25,8 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.5.0",
+    "@types/markdown-it": "^14.1.1",
+    "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/parser": "^7.13.1",
     "cspell": "^8.9.1",
     "eslint": "^9.5.0",
