--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
+    "astro-pagefind": "^1.5.0",
     "markdown-it": "^14.1.0",
     "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.4",
