--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
     "astro-pagefind": "^1.5.0",
+    "astro-seo": "^0.8.4",
     "markdown-it": "^14.1.0",
     "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.4",
