--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/partytown": "^2.1.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@digi4care/astro-google-tagmanager": "^1.2.1",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
     "astro-pagefind": "^1.5.0",
