--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@digi4care/astro-google-tagmanager": "^1.2.1",
+    "@shikijs/transformers": "^1.10.3",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
     "astro-pagefind": "^1.5.0",
