--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@digi4care/astro-google-tagmanager": "^1.2.1",
+    "@iconify-json/tabler": "^1.1.118",
     "@shikijs/transformers": "^1.10.3",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.11.0",
+    "astro-icon": "^1.1.0",
     "astro-pagefind": "^1.5.0",
     "astro-seo": "^0.8.4",
     "markdown-it": "^14.1.0",
